refactor: 优化 YAML 文件写入方式
- 使用 Files.writeString替代 Files.write 方法写入 YAML 内容
- 简化代码并提高可读性